--- a/dicee.html
+++ b/dicee.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 
+    <section id="game-section">
     <div class="container">
       <h1>Refresh Me</h1>
       <h2>Roll Your Dice!</h2>
@@ -24,6 +25,7 @@
       </div>
 
     </div>
+  </section>
 
   <script src="index.js" charset="utf-8"></script> 
   </body>
