added meta tags

--- a/dicee.html
+++ b/dicee.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
   </head>
@@ -27,7 +28,7 @@
     </div>
   </section>
 
-  <script src="index.js" charset="utf-8"></script> 
+  <script src="js/index.js" charset="utf-8"></script> 
   </body>
 
   <br><br><br>
