--- a/index.html
+++ b/index.html
@@ -4,31 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
   </head>
   <body>
 
-    <section id="game-section">
+  <section id="game-section">
     <div class="container">
       <h1>Refresh Me</h1>
       <h2>Roll Your Dice!</h2>
+    <div class="button-area">
+      <button type="button" onclick="pageRefresh()" class="btn btn-outline-success btn-lg">Play Now</button>
+    </div>
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
+        <img class="img1" src="images/dice6.png"> 
       </div>
 
       <div class="dice"> 
         <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
+        <img class="img2" src="images/dice6.png"> 
       </div>
 
     </div>
+
+  </section>
+  
+  <section>
+  
+      
+    
   </section>
 
   <script src="js/index.js" charset="utf-8"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 
   <br><br><br>
